--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -210,6 +210,7 @@ a.menu-toggle-btn {
 	box-shadow: inset 0 0 0 200px rgba(36,36,36, 0.7);
 }
 .s_top	{ margin-top: 8%; }
+.s_mid	{ margin-top: 10%; }
 
 .templatemo_hexteam .gallery-item .templatemo_overlay1 a {
     margin-top: 78%;
@@ -665,6 +666,7 @@ and (max-width : 559px)	{
 	.templatemo-hex-top1	{ margin-top: 110px; }
 	.templatemo_servicecol2	{ margin-top: 15%; float: left; }
 	.s_top	{ margin-top: 14%; }
+	.s_mid	{ margin-top: 14%; }
 	.hexagon-a	{ margin-left: 5px; }
 	.hexagon-a a	{ min-width: 190px; }
 	.hexagonservices a.hlinkbott	{ width: 200px; }
